--- a/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
+++ b/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
@@ -71,7 +71,7 @@
     <Compile Include="SoundtrackTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RunescapeCacheTools\RuneScapeCacheTools.csproj">
+    <ProjectReference Include="..\RuneScapeCacheTools\RuneScapeCacheTools.csproj">
       <Project>{a2c77ae9-5e36-4bde-b6de-ea5ada87dad2}</Project>
       <Name>RuneScapeCacheTools</Name>
     </ProjectReference>
@@ -261,7 +261,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\xunit.runner.visualstudio.2.1.0\build\net20\xunit.runner.visualstudio.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.runner.visualstudio.2.1.0\build\net20\xunit.runner.visualstudio.props'))" />
   </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
