Implement IDisposable on Cache and FileStore
Move BinaryStreamExtensions to base namespace.

Add PathExtensions to help with directories

--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -100,8 +100,9 @@
     <Compile Include="Cache\RuneTek5\Enums\ScriptVarType.cs" />
     <Compile Include="Cache\IExtensionGuesser.cs" />
     <Compile Include="Cache\Vector3.cs" />
+    <Compile Include="PathExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Cache\BinaryStreamExtensions.cs" />
+    <Compile Include="BinaryStreamExtensions.cs" />
     <Compile Include="Cache\RuneTek5\ReferenceTable.cs" />
   </ItemGroup>
   <ItemGroup>
