--- a/RuneScapeCacheToolsCLI/App.config
+++ b/RuneScapeCacheToolsCLI/App.config
@@ -30,4 +30,12 @@
       </layout>
     </appender>
   </log4net>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="ICSharpCode.SharpZipLib" publicKeyToken="1b03e6acf1164f73" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.86.0.518" newVersion="0.86.0.518" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
