Start work on downloader

--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -81,6 +81,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cache\CacheFile.cs" />
+    <Compile Include="Cache\RuneTek5\Downloader\Downloader.cs" />
+    <Compile Include="Cache\RuneTek5\Downloader\HandshakeResponse.cs" />
     <Compile Include="Cache\SectorException.cs" />
     <Compile Include="Cache\RuneScapeBinaryStreamExtensions.cs" />
     <Compile Include="Cache\RuneTek5\Archive.cs" />
@@ -111,7 +113,6 @@
     <Compile Include="Cache\RuneTek5\ReferenceTable.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Cache\RuneTek5\Downloader\" />
     <Folder Include="Cache\RuneTek7\" />
   </ItemGroup>
   <ItemGroup>
