--- a/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
+++ b/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
@@ -66,8 +66,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="CacheCollection.cs" />
-    <Compile Include="CacheFixture.cs" />
+    <Compile Include="Fixtures\CacheCollection.cs" />
+    <Compile Include="Fixtures\CacheFixture.cs" />
     <Compile Include="RuneTek5CacheTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DownloaderTests.cs" />
