Major refactoring/layout changes

--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -80,34 +80,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Audio\AudioChunkDescriptor.cs" />
+    <Compile Include="Audio\JagaFile.cs" />
+    <Compile Include="Audio\JagaParseException.cs" />
+    <Compile Include="Audio\Soundtrack.cs" />
+    <Compile Include="Audio\SoundtrackException.cs" />
     <Compile Include="Cache\CacheFile.cs" />
-    <Compile Include="Cache\RuneTek5\Downloader\Downloader.cs" />
-    <Compile Include="Cache\RuneTek5\Downloader\DownloaderException.cs" />
-    <Compile Include="Cache\RuneTek5\Downloader\HandshakeResponse.cs" />
-    <Compile Include="Cache\RuneTek5\Enums\CompressionType.cs" />
-    <Compile Include="Cache\RuneTek5\Enums\Language.cs" />
+    <Compile Include="Cache\RuneTek5\CompressionType.cs" />
+    <Compile Include="Cache\RuneTek5\Language.cs" />
+    <Compile Include="Cache\RuneTek5\Sector.cs" />
     <Compile Include="Cache\SectorException.cs" />
     <Compile Include="Cache\RuneScapeBinaryStreamExtensions.cs" />
     <Compile Include="Cache\RuneTek5\Archive.cs" />
     <Compile Include="Cache\CacheException.cs" />
-    <Compile Include="Cache\CacheBase.cs" />
-    <Compile Include="Cache\RuneTek5\Audio\SoundtrackException.cs" />
-    <Compile Include="Cache\RuneTek5\Audio\JagaParseException.cs" />
-    <Compile Include="Cache\RuneTek5\Audio\AudioChunkDescriptor.cs" />
-    <Compile Include="Cache\RuneTek5\Audio\Soundtrack.cs" />
+    <Compile Include="Cache\Cache.cs" />
     <Compile Include="Cache\RuneTek5\RuneTek5Cache.cs" />
     <Compile Include="Cache\RuneTek5\ChecksumTable.cs" />
     <Compile Include="Cache\RuneTek5\Container.cs" />
-    <Compile Include="Cache\RuneTek5\Enums\EnumFile.cs" />
-    <Compile Include="Cache\RuneTek5\Enums\EnumParseException.cs" />
+    <Compile Include="Download\DownloaderException.cs" />
+    <Compile Include="Download\Downloader.cs" />
+    <Compile Include="Download\HandshakeResponse.cs" />
+    <Compile Include="Enums\EnumFile.cs" />
+    <Compile Include="Enums\EnumParseException.cs" />
     <Compile Include="Cache\RuneTek5\FileStore.cs" />
     <Compile Include="Cache\RuneTek5\Index.cs" />
-    <Compile Include="Cache\RuneTek5\Audio\JagaFile.cs" />
-    <Compile Include="Cache\RuneTek5\Sector.cs" />
     <Compile Include="Cache\ExtendableExtensionGuesser.cs" />
-    <Compile Include="Cache\RuneTek5\Enums\EnumOpcode.cs" />
-    <Compile Include="Cache\RuneTek5\Enums\BaseVarType.cs" />
-    <Compile Include="Cache\RuneTek5\Enums\ScriptVarType.cs" />
+    <Compile Include="Enums\EnumOpcode.cs" />
+    <Compile Include="Enums\BaseVarType.cs" />
+    <Compile Include="Enums\ScriptVarType.cs" />
     <Compile Include="Cache\IExtensionGuesser.cs" />
     <Compile Include="Cache\Vector3.cs" />
     <Compile Include="PathExtensions.cs" />
