Download in blocks
Major overhaul.

Downloading is handled by a single processor thread internally, but is still asynchronous for the outside world.

--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Cache\RuneTek5\RuneTek5CacheFile.cs" />
     <Compile Include="Download\DownloaderException.cs" />
     <Compile Include="Download\Downloader.cs" />
+    <Compile Include="Download\FileRequest.cs" />
     <Compile Include="Download\HandshakeResponse.cs" />
     <Compile Include="Enums\EnumFile.cs" />
     <Compile Include="Enums\EnumParseException.cs" />
