--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -86,6 +86,10 @@
     <Compile Include="Audio\Soundtrack.cs" />
     <Compile Include="Audio\SoundtrackException.cs" />
     <Compile Include="Cache\CacheFile.cs" />
+    <Compile Include="Cache\Downloader\CacheDownloader.cs" />
+    <Compile Include="Cache\Downloader\DownloaderException.cs" />
+    <Compile Include="Cache\Downloader\FileRequest.cs" />
+    <Compile Include="Cache\Downloader\HandshakeResponse.cs" />
     <Compile Include="Cache\RuneTek5\CacheFileOptions.cs" />
     <Compile Include="Cache\RuneTek5\CompressionType.cs" />
     <Compile Include="Cache\RuneTek5\Language.cs" />
@@ -101,10 +105,6 @@
     <Compile Include="Cache\RuneTek5\RuneTek5Cache.cs" />
     <Compile Include="Cache\RuneTek5\ChecksumTable.cs" />
     <Compile Include="Cache\RuneTek5\RuneTek5CacheFile.cs" />
-    <Compile Include="Download\DownloaderException.cs" />
-    <Compile Include="Download\Downloader.cs" />
-    <Compile Include="Download\FileRequest.cs" />
-    <Compile Include="Download\HandshakeResponse.cs" />
     <Compile Include="Enums\EnumFile.cs" />
     <Compile Include="Enums\EnumParseException.cs" />
     <Compile Include="Cache\RuneTek5\FileStore.cs" />
