Skip ExportTracksAsync until oggvideotools is present in Travis
Rename DownloaderTests to CacheDownloaderTests to reflect the type's name.

--- a/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
+++ b/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Fixtures\CacheFixture.cs" />
     <Compile Include="RuneTek5CacheTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DownloaderTests.cs" />
+    <Compile Include="CacheDownloaderTests.cs" />
     <Compile Include="SoundtrackTests.cs" />
   </ItemGroup>
   <ItemGroup>
