--- a/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
+++ b/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CacheDownloaderTests.cs" />
     <Compile Include="SoundtrackTests.cs" />
+    <Compile Include="CacheBaseTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RuneScapeCacheTools\RuneScapeCacheTools.csproj">
