--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Cache\Vector3.cs" />
     <Compile Include="Extensions\BinaryStreamExtensions.cs" />
     <Compile Include="Extensions\PathExtensions.cs" />
+    <Compile Include="Extensions\ExtendedProgress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cache\RuneTek5\ReferenceTable.cs" />
   </ItemGroup>
