--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -85,11 +85,12 @@
     <Compile Include="Audio\JagaParseException.cs" />
     <Compile Include="Audio\Vorbis\VorbisAudioPacket.cs" />
     <Compile Include="Audio\Vorbis\VorbisException.cs" />
-    <Compile Include="Audio\Vorbis\VorbisHeader.cs" />
-    <Compile Include="Audio\Vorbis\VorbisIdentificationHeader.cs" />
+    <Compile Include="Audio\Vorbis\VorbisHeaderPacket.cs" />
+    <Compile Include="Audio\Vorbis\VorbisIdentificationHeaderPacket.cs" />
     <Compile Include="Audio\Vorbis\VorbisPacket.cs" />
-    <Compile Include="Audio\Vorbis\VorbisSetupHeader.cs" />
-    <Compile Include="Audio\Vorbis\VorbisCommentHeader.cs" />
+    <Compile Include="Audio\Vorbis\VorbisPageHeaderType.cs" />
+    <Compile Include="Audio\Vorbis\VorbisSetupHeaderPacket.cs" />
+    <Compile Include="Audio\Vorbis\VorbisCommentHeaderPacket.cs" />
     <Compile Include="Audio\Vorbis\VorbisPage.cs" />
     <Compile Include="Audio\Vorbis\VorbisReader.cs" />
     <Compile Include="Audio\Soundtrack.cs" />
