--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Audio\AudioChunkDescriptor.cs" />
     <Compile Include="Audio\JagaFile.cs" />
     <Compile Include="Audio\JagaParseException.cs" />
+    <Compile Include="Audio\Vorbis\VorbisCrc.cs" />
     <Compile Include="Audio\Vorbis\VorbisAudioPacket.cs" />
     <Compile Include="Audio\Vorbis\VorbisException.cs" />
     <Compile Include="Audio\Vorbis\VorbisHeaderPacket.cs" />
