Start OggPacket addition

--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Audio\JagaFile.cs" />
     <Compile Include="Audio\JagaParseException.cs" />
     <Compile Include="Audio\Ogg\OggCrc.cs" />
+    <Compile Include="Audio\Ogg\OggPacket.cs" />
     <Compile Include="Audio\Vorbis\VorbisAudioPacket.cs" />
     <Compile Include="Audio\Ogg\OggException.cs" />
     <Compile Include="Audio\Vorbis\VorbisException.cs" />
