--- a/RuneScapeCacheTools/packages.config
+++ b/RuneScapeCacheTools/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="FlacLibSharp" version="2.0.0" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
+  <package id="NAudio" version="1.7.3" targetFramework="net461" />
   <package id="NVorbis" version="0.8.5.0" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
   <package id="System.Data.SQLite" version="1.0.103" targetFramework="net461" />
