Wrap web responses in usings
Welcome to disposables 101.

--- a/RuneScapeCacheToolsCLI/App.config
+++ b/RuneScapeCacheToolsCLI/App.config
@@ -5,9 +5,11 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
+  
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -19,6 +21,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
   <log4net>
     <root>
       <level value="INFO" />
@@ -30,6 +33,7 @@
       </layout>
     </appender>
   </log4net>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -38,4 +42,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  
+  <system.net>
+    <connectionManagement>
+      <add address="*" maxconnection="20" />
+    </connectionManagement>
+  </system.net>
 </configuration>
