--- a/RuneScapeCacheToolsCLI/App.config
+++ b/RuneScapeCacheToolsCLI/App.config
@@ -16,6 +16,7 @@
         <parameter value="v13.0" />
       </parameters>
     </defaultConnectionFactory>
+    
     <providers>
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
@@ -26,10 +27,23 @@
     <root>
       <level value="INFO" />
       <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="RollingFileAppender" />
     </root>
+    
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="[%date{HH:mm:ss} %level %logger{1}] %message%newline" />
+      </layout>
+    </appender>
+
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="rsct.log" />
+      <appendToFile value="false" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="7" />
+      <maximumFileSize value="50GB" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="[%date{yyyy-MM-dd HH:mm:ss} %level %logger{1} T%thread] - %message%newline" />
       </layout>
     </appender>
   </log4net>
