--- a/RuneScapeCacheToolsCLI/App.config
+++ b/RuneScapeCacheToolsCLI/App.config
@@ -43,7 +43,7 @@
       <maxSizeRollBackups value="7" />
       <maximumFileSize value="50GB" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="[%date{yyyy-MM-dd HH:mm:ss} %level %logger{1} T%thread] - %message%newline" />
+        <conversionPattern value="[%date{yyyy-MM-dd HH:mm:ss} %level %logger{1} (%thread)] - %message%newline" />
       </layout>
     </appender>
   </log4net>
